test/classes/casts/coerceInitAssign/error/from-shared-A-nilable-to-unmanaged-A-nilable.chpl
// AUTO-GENERATED: Do not edit
class A {}
class Parent {}
class Child : Parent {}
proc foo() {
  // coercing from shared A? to unmanaged A?
  var alloc = new shared A();
  var a:shared A? = alloc;
  var a_:unmanaged A? = a;
}
proc main() {
  foo();
}
